--- a/index.html
+++ b/index.html
@@ -1,24 +1,139 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BONUS BGC</title>
+  </head>
 
-<head>
-<meta charset="utf-8"/>
-<title> Ograj Amadeusza</title>
-<link href="style.css" rel="stylesheet" type="text/css">
-</head>
+  <body>
+    <header>
+      <div class="wrapper">
+        <h1 class="logo">BONUS</h1>
+        <nav>
+          <h2>BONUS BONUS</h2>
+          <div id="burger-nav"></div>
 
-<body onload="odliczanie();">
+          <ul>
+            <li><a href="" class="current">Łazarski</a></li>
+            <li><a href="" class="current">O Bonusie</a></li>
+            <li><a href="" class="current">Czarna Lista</a></li>
+            <li><a href="" class="current">Trener</a></li>
+            <li><a href="" class="current">Sklep</a></li>
+            <li><a href="" class="current">Kontakt</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
+    <div id="banner">
+      <img src="img/banner.jpg" alt="banner" />
+    </div>
+<main class="wrapper">
 
-<div id="game"> 
-<div id="hero"></div>
-<div id="block"></div>
+    <section id="spoints">
+
+        <ul>
+            <li>
+                <img src="img/ci1.png" alt="ci1">
+                <h3>Siła</h3>
+                <p>Wojownik z Łazarza, znany ze swoich spektakularnych sztuk walki oraz muskulatury.</p>
+            </li>
+            <li>
+                <img src="img/ci2.png" alt="ci2">
+                <h3>Zwinność</h3>
+                <p>Jego zwinność jest niezrównana.Potrafi posługiwać się bardzo złożoną techniką „Kołowrotek”.</p>
+            </li>
+            <li>
+                <img src="img/ci3.png" alt="ci3">
+                <h3>Inteligencja</h3>
+                <p>Znany sarnolog, archeolog, biolog, historyk.</p>
+            </li>
+            <li>
+                <img src="img/ci4.png" alt="ci4">
+                <h3>Aparycja</h3>
+                <p>Chyba nie trzeba nic dodawać.</p>
+            </li>
+</ul>
+</section>
+
+<section id="lastwork">
+
+    <ul>
+        <li>
+            <img src="img/foto1.jpg" alt="foto1">
+            <h3>Wygrana z BodyChristem</h3>
+            <p>Walka na gali XGSW</p>
+            <p>Podczas gali „Poznań Fight Night” Bodychrist zmierzył się w pseudowalce z Bonusem BGC. Była to powtórka walki Popka z Pudzianem, w dużo gorszym wydaniu. Sędzia powstrzymał się od śmiechu a na trybunach słychać było gwizdy.</p>
+        </li>
+        <li>
+            <img src="img/foto2.jpg" alt="foto2">
+            <h3>Wygrana z Warszawskim Dreskiem</h3>
+            <p>Gala PunchDown3</p>
+            <p>Warszawski dresik obsrał zbroje i oddał walke walkoverem.</p>
+        </li>
+        <li>
+            <img src="img/foto3.jpg" alt="foto3">
+            <h3>Wydanie płyty "LECIMY TUTAJ"</h3>
+            <p>BONUSBGC x BODYCHRIST</p>
+            <p>Bonus BGC is young, upcoming Polish rapper from Poznań, who came up big on YouTube in last couple of weeks. He is well known for his unforgettable freestyles about his hood background and generally life he lives.</p>
+        </li>
+        
+</ul>
+</section>
+</main>
+
+<div id="quote">
+<blockquote>
+    Na łazarskim rejonie nie jest kolorowo czasem zapija się smutki i bywa czilałtowo.
+    Na łazarskim rejonie, bieda tutaj piszczy nie ma co się martwić, musisz podnieść się ze zgliszczy.
+    Tutaj pierwsza miłości i rozczarowanie za stracony czas i porytą banię.
+    Wyciągnąłem wnioski, nigdy nie ufaj kobiecie.
+    Zamąci ci w głowie, wokół palca oplecie.
+    Czasami bywam na Wildzie, u ziomka na kwadracie.
+    Obalamy flaszki, potem leżymy na macie.
+    Środkowy palec wbijam w hejterów.
+    Coś ci się nie podoba, lepiej tego mi nie mów.
+    Trenowałem MMA i futbol amerykański.
+    Teraz zajmuję się boksem w klubie poznańskim.
+    Adrenalina, to jest to co lubię.
+    Nie bądź taki kozak, bo cię szybko ukrócę.
+</blockquote>
 </div>
-<script type="text/javascript" src="app.js"> </script>
 
+<footer>
+    <div class="wrapper">
+        <ul>
+            <li><h4>Kontakt</h4></li>
+            <li>Bonusa BGC możesz spotkać głównie</li>
+            <li>na Łazarskim rejonie</li>
+            <li>w ringu</li>
+            <li>w ringu na Łazarskim rejonie</li>
+        </ul>
+        <ul>
+            <li><h4>Twitter</h4></li>
+            <li class>Bonus nie ma twittera, ale poleca kilka fnnpagy</li>
+            <li class="tw">@ŁazarskiRejon</li>
+            <li class="tw">@Shaolin</li>
+        </ul>
+        <ul>
+            <li><h4>Czarna Lista</h4></li>
+            <li>Tiger Bonzo</li>
+            <li>Wojtek Gola</li>
+            <li>Pakol</li>
+</ul>
+<ul>
+    <li><h4>o Bonusie</h4></li>
+    <li>Jego specjalnym, unikatowym i sekretnym skillem jest Buła i Łokieć</li>
+    <li>Dziewczyna Bonusa BGC nazywa się Kortnej</li>
+    <li>Bonus BGC w ramach przygotowań do FAME MMA 2 szkolił się w Shaolin.</li>
+</ul>
 
-<div id="data" align="center"></div>
-<div id="czas" align="center"></div>
-<script type="text/javascript" src="script/timer.js"> </script>
+    </div>
+
+    <div id="copyright">&copy; CRS mistrz wrzechświata w szachach do lat 8</div>
+</footer>
 </body>
 </html>
